# xtcat

./: .gitignore  Cargo.toml  README.md  main.c  makefile
src/: main.rs
tests/: main.rs
tests/test_files/: joined.xtc  split1.xtc  split2.xtc  split3.xtc  split4.xtc  split5.xtc
