[package]
name = "xtcat"
description = "Fast XTC file concatenator"
license = "MIT"
version = "0.3.2"
edition = "2021"
repository = "https://github.com/Ladme/xtcat"
readme = "README.md"
keywords = ["gromacs", "xtc", "molecular-dynamics"]
categories = ["command-line-utilities", "science"]
exclude = ["/tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
colored = "2.0.0"
termion = "2.0.1"

[dev-dependencies]
assert_cmd = "2.0.11"
file_diff = "1.0.0"
tempfile  = "3.5.0"